# Pomodoro

./: .dev.env  .gitignore  .prod.env  Makefile  alembic.ini  dependecy.py  docker-compose.yml  exception.py  fixtures.py  main.py  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 17f0ecf3418b_extend_user_profile.py  1ee6ef55bca4_user_id_in_tasks.py  40cc1b4f0dca_yandex_access_token.py  5b707b238bb6_category_type.py  8f11d9031d7f_user_init.py  da7b6f043f19_init.py  de2af8e6b1b8_delete_access_token.py
cache/: __init__.py  accessor.py
client/: __init__.py  google.py  yandex.py
database/: .gitignore  accessor.py  database.py  models.py
handlers/: __init__.py  auth.py  categories.py  ping.py  tasks.py  user.py
models/: __init__.py  task.py  user.py
repository/: __init__.py  cache.py  task.py  user.py
schema/: __init__.py  auth.py  task.py  user.py
servise/: __init__.py  auth.py  task.py  user.py
